feat: correción de footer y otros componentes

--- a/src/components/Carrusel.astro
+++ b/src/components/Carrusel.astro
@@ -62,7 +62,7 @@ const tags = [
         width: 90%;
         position: relative;
         overflow: hidden;
-        padding: 20px;
+        padding: 50px 20px;
     }
     .inner {
         width: fit-content;
@@ -73,7 +73,7 @@ const tags = [
     .tag {
         position: relative;
         width: 15rem;
-        height: 12rem;
+        height: 15rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -98,8 +98,8 @@ const tags = [
         z-index: 2;
         color: white;
         text-align: center;
-        font-size: 18px;
-        padding: 10px;
+        font-size: 20px;
+        padding: 15px;
     }
     .fade {
         position: absolute;
