--- a/src/components/ServiceUs.astro
+++ b/src/components/ServiceUs.astro
@@ -124,7 +124,6 @@ import Carrusel from "./Carrusel.astro";
         padding: 0 60px;
         background-color: white;
     }
-
     .obras {
         position: sticky;
         top: 40vh;
@@ -139,6 +138,7 @@ import Carrusel from "./Carrusel.astro";
         display: flex;
         justify-content: center;
         background-color: #1e293b;
+        margin-top: 5rem;  
     }
 
     /**OBRAS DE CARRETERAS */
