--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,83 +2,147 @@
 import { Image } from "astro:assets";
 import logo from "../assets/logo.webp";
 import barra from "../assets/barra-abajo.webp";
-
 ---
 
-<header class="header">
-    <div class="logo-container">
-        <a href="/">
-            <Image src={logo} alt="" class="logo"/>
+<section class="header">
+    <div class="header__branding">
+        <a href="/" class="branding__link">
+            <Image src={logo} alt="Logo" class="branding__logo" />
         </a>
-        <h1 class="name">JAIL CONSTRUCTORA S.A.C</h1>
-        <div class="barra">
-            <Image src={barra} alt="" class="barra"/>
+        <h1 class="branding__name">JAIL CONSTRUCTORA S.A.C</h1>
+        <div class="branding__divider">
+            <Image
+                src={barra}
+                alt="Divisor decorativo"
+                class="branding__barra"
+            />
         </div>
     </div>
 
-    <nav class="nav">
-        <ul>
-            <li><a href="/nosotros">Nosotros</a></li>
-            <li><a href="/servicios">Servicios</a></li>
-            <li><a href="/proyectos">Proyectos</a></li>
-            <li><a href="/contacto">Contacto</a></li>
+    <nav class="header__nav nav">
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="/nosotros" class="nav__link nosotros">Nosotros</a>
+            </li>
+            <li class="nav__item">
+                <a href="/servicios" class="nav__link servicios">Servicios</a>
+            </li>
+            <li class="nav__item">
+                <a href="/proyectos" class="nav__link proyectos">Proyectos</a>
+            </li>
+            <li class="nav__contact">
+                <a href="#" class="nav__link contacto">Contacto</a>
+            </li>
         </ul>
     </nav>
-</header>
+</section>
 <style>
     .header {
+        position: fixed;
         top: 0;
         left: 0;
-        position: fixed;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         padding: 20px 60px;
-        background-size: cover;
-        z-index: 1000;
         width: 100%;
         height: 120px;
         box-sizing: border-box;
-        background: linear-gradient(to bottom, rgba(0,0,0,0.8),rgba(0,0,0,0));
+        z-index: 1000;
+        background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.8),
+            rgba(0, 0, 0, 0)
+        );
     }
-    .logo-container {
+
+    .header__branding {
         display: grid;
         grid-template-columns: 60px 400px;
-        grid-template-rows: 60px 30px;    
+        grid-template-rows: 60px 30px;
     }
-    .name {
-    display: flex;
-    align-items: end;
-    }
-    .barra{
-        grid-column: span 2/ span 2;
-        width: 100%;
-        height: 20px;
-    }
-    .logo-container .logo {
+
+    .branding__logo {
         width: 60px;
         height: 60px;
     }
-    .logo-container h1 {
-        font-family: 'Alfa Slab One', serif;
+
+    .branding__name {
+        font-family: "Alfa Slab One", serif;
         font-size: 24px;
-        color: #F0F8FF;
+        color: #f0f8ff;
         margin: 0;
+        display: flex;
+        align-items: end;
     }
-    .nav {
+
+    .branding__divider {
+        grid-column: span 2 / span 2;
+        width: 100%;
+        height: 20px;
+    }
+
+    .branding__barra {
+        width: 100%;
+        height: 100%;
+    }
+
+    .header__nav {
         display: flex;
         justify-content: end;
         align-items: center;
     }
-    .nav ul {
+
+    .nav__list {
         display: flex;
         list-style: none;
         gap: 20px;
         margin: 0;
     }
-    .nav ul li a {
+
+    .nav__item {
+        position: relative;
+    }
+
+    .nav__link {
         text-decoration: none;
-        color: #F0F8FF;
+        color: #f0f8ff;
         font-size: 20px;
         font-weight: bold;
+    }
+
+    .nav__item:hover .nav__link {
+        color: #f0f8ff;
+        transition: 0.5s all ease;
+    }
+
+    .nav__item::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 2px;
+        bottom: -5px;
+        left: 0;
+        background-color: aqua;
+        transform-origin: bottom right;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .nav__item:hover::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+    }
+    .contacto {
+        padding: 10px;
+        border-radius: 20px;
+        background: #020024;
+        background: linear-gradient(
+            90deg,
+            #30297E 0%,
+            #291E68 35%,
+            #201253 100%
+        );
+        color: #fff;
+        border: none;
     }
 </style>
