--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -2,9 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Projects from "../components/Projects.astro";
+import Footer from "../components/Footer.astro";
+import ObrasCarretera from "../components/ObrasCarretera.astro";
 ---
 
 <Layout>
     <Header/>
     <Projects/>
+    <Footer/>
 </Layout>
